samples/_failures_safe/1761195886_75ba57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7811a635.c: In function ‘main’:
./samples/SAFE/__tmp_7811a635.c:145:13: error: expected declaration or statement at end of input
  145 |             for (int i = 0; i < result_rows; i++) {
      |             ^~~
./samples/SAFE/__tmp_7811a635.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7811a635.c:145:13: error: expected declaration or statement at end of input
